--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -4,10 +4,6 @@ on:
   workflow_call:
   workflow_dispatch:
 
-env:
-  JDK_DISTRIUTION: temurin
-  JDK_VERSION: 17.0.5
-
 jobs:
   staging-repo:
     runs-on: ubuntu-latest
@@ -21,42 +17,34 @@ jobs:
       )
     outputs:
       maven-central-repo-id: ${{ steps.staging-repo.outputs.MavenCentral }}
-      next-version: ${{ steps.staging-repo.outputs.new-release-version }}
+      next-version: ${{ steps.compute-next-version.outputs.next-version }}
+      will-release: ${{ steps.compute-next-version.outputs.will-release }}
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v3.3.0
         with:
           fetch-depth: 0
-      - name: Setup Java
-        uses: actions/setup-java@v3.10.0
-        with:
-          distribution: ${{ env.JDK_DISTRIUTION }}
-          java-version: ${{ env.JDK_VERSION }}
-          cache: gradle
-      - name: Create staging repository
+      - uses: DanySK/build-check-deploy-gradle-action@2.1.25
         id: staging-repo
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-          MAVEN_CENTRAL_USERNAME: nicolasfarabegoli
-          MAVEN_CENTRAL_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-        run: |
-          ./gradlew createStagingRepositoryOnMavenCentral --parallel
-          [[ -f build/staging-repo-ids.properties ]] || (
-            echo "Staging repositories ID file not found" &&
-            exit 1
-          )
-          REPO_IDS=$(cat build/staging-repo-ids.properties)
-          echo "Staging repositories IDs:\n$REPO_IDS"
-          echo $REPO_IDS >> $GITHUB_OUTPUT
-          npm install
-          npx semantic-release --dry-run
-          if [[ ! -s ".next-version" ]]; then
-            echo "No new release version found"
-            echo "new-release-version=$(git describe --tag)" >> $GITHUB_OUTPUT
-          else
-            echo "New release version found: $(cat .next-version)"
-            echo "new-release-version=$(cat .next-version)" >> $GITHUB_OUTPUT
-          fi
+        with:
+          maven-central-username: 'nicolasfarabegoli'
+          maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+          should-run-codecov: false
+          check-command: true
+          build-command: ./gradlew createStagingRepositoryOnMavenCentral --parallel
+          clean-command: |
+            [[ -f build/staging-repo-ids.properties ]] || (
+              echo "Staging repositories ID file not found" &&
+              exit 1
+            )
+            REPO_IDS=$(cat build/staging-repo-ids.properties)
+            echo "Staging repositories IDs:\n$REPO_IDS"
+            echo $REPO_IDS >> $GITHUB_OUTPUT
+      - name: Compute next release version
+        id: compute-next-version
+        uses: nicolasfara/precompute-semantic-release-version-action@1.0.1
+        with:
+          github-token: ${{ github.token }}
   build:
     needs: [ staging-repo ]
     strategy:
@@ -71,42 +59,23 @@ jobs:
         uses: actions/checkout@v3.3.0
         with:
           fetch-depth: 0
-      - name: Setup Java
-        uses: actions/setup-java@v3.10.0
+      - uses: DanySK/build-check-deploy-gradle-action@2.1.25
         with:
-          distribution: ${{ env.JDK_DISTRIUTION }}
-          java-version: ${{ env.JDK_VERSION }}
-          cache: gradle
-      - name: Run assemble and check tasks
-        run: |
-          ./gradlew assemble --parallel
-          ./gradlew check --parallel
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Test upload artifacts
-        if: >-
-          !github.event.repository.fork
-          && (
-            github.event_name != 'pull_request'
-            || github.event.pull_request.head.repo.full_name == github.repository
-          )
-        run: ./gradlew -PisMainHost=${{ runner.os == 'Linux' }} -Pversion="${{ needs.staging-repo.outputs.next-version }}" -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} uploadAll --parallel
-        env:
-          MAVEN_CENTRAL_USERNAME: nicolasfarabegoli
-          MAVEN_CENTRAL_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.GPG_PRIVATEKEY }}
-          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.GPG_PASSPHRASE }}
-          ORG_GRADLE_PROJECT_releaseStage: true
-      - name: Upload code coverage result
-        if: ${{ runner.os == 'Linux' }}
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: build/reports/kover/merged/xml/report.xml
-          flags: unittests
-          fail_ci_if_error: true
-          verbose: true
-
+          maven-central-username: 'nicolasfarabegoli'
+          maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+          signing-key: ${{ secrets.SIGNING_KEY }}
+          signing-password: ${{ secrets.SIGNING_PASSWORD }}
+          should-run-codecov: ${{ runner.os == 'Linux' }}
+          codecov-directory: build/reports/kover/merged/xml/report.xml
+          should-deploy: >-
+            !github.event.repository.fork
+            && (
+              github.event_name != 'pull_request'
+              || github.event.pull_request.head.repo.full_name == github.repository
+            )
+          # Dry-deployment
+          deploy-command: >-
+            ./gradlew -PisMainHost=${{ runner.os == 'Linux' }} -Pversion="${{ needs.staging-repo.outputs.next-version }}" -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} uploadAll --parallel
   docsite:
     runs-on: ubuntu-latest
     concurrency:
@@ -143,19 +112,15 @@ jobs:
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v3.3.0
-      - name: Setup Java
-        uses: actions/setup-java@v3.10.0
+      - uses: DanySK/build-check-deploy-gradle-action@2.1.25
         with:
-          distribution: ${{ env.JDK_DISTRIUTION }}
-          java-version: ${{ env.JDK_VERSION }}
-          cache: gradle
-      - name: Close staging repositories
-        run: |
-          ./gradlew -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} close --parallel
-        env:
-          MAVEN_CENTRAL_USERNAME: nicolasfarabegoli
-          MAVEN_CENTRAL_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-
+          maven-central-username: 'nicolasfarabegoli'
+          maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+          should-run-codecov: false
+          build-command: true
+          check-command: true
+          clean-command: >-
+            ./gradlew -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} close --parallel
   release:
     concurrency:
       group: release
@@ -174,29 +139,28 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.PERSONAL_TOKEN }}
-      - name: Setup Java
-        uses: actions/setup-java@v3.10.0
+      - name: Find the version of Node from package.json
+        id: node-version
+        run: echo "version=$(jq -r .engines.node package.json)" >> $GITHUB_OUTPUT
+      - name: Install Node
+        uses: actions/setup-node@v3.6.0
         with:
-          distribution: ${{ env.JDK_DISTRIUTION }}
-          java-version: ${{ env.JDK_VERSION }}
-          server-id: ossrh
-          server-username: nicolasfarabegoli
-          server-password: MAVEN_CENTRAL_PASSWORD
-          gpg-private-key: ${{ secrets.GPG_PRIVATEKEY }}
-          gpg-passphrase: GPG_PASSPHRASE
-          cache: gradle
-      - name: Release artifacts
-        run: |
-          npm install
-          npx semantic-release
+          node-version: ${{ steps.node-version.outputs.version }}
+      - uses: DanySK/build-check-deploy-gradle-action@2.1.25
         env:
-          GITHUB_TOKEN: ${{ github.token }}
-          STAGING_REPO_ID: ${{ needs.staging-repo.outputs.maven-central-repo-id }}
-          MAVEN_CENTRAL_USERNAME: nicolasfarabegoli
-          MAVEN_CENTRAL_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.GPG_PRIVATEKEY }}
-          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.GPG_PASSPHRASE }}
           ORG_GRADLE_PROJECT_releaseStage: true
+        with:
+          build-command: true
+          check-command: true
+          deploy-command: |
+            npm install
+            npx semantic-release
+          should-run-codecov: false
+          should-deploy: true
+          github-token: ${{ github.token }}
+          maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+          signing-key: ${{ secrets.GPG_PRIVATEKEY }}
+          signing-password: ${{ secrets.GPG_PASSPHRASE }}
 
   success:
     runs-on: ubuntu-latest
