--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -28,7 +28,7 @@ jobs:
           fetch-depth: 0
       - uses: DanySK/build-check-deploy-gradle-action@2.1.25
         with:
-          maven-central-username: 'nicolasfarabegoli'
+          maven-central-username: nicolasfarabegoli
           maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
           should-run-codecov: false
           should-deploy: true
@@ -66,12 +66,12 @@ jobs:
           fetch-depth: 0
       - uses: DanySK/build-check-deploy-gradle-action@2.1.25
         with:
-          maven-central-username: 'nicolasfarabegoli'
+          maven-central-username: nicolasfarabegoli
           maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
           signing-key: ${{ secrets.GPG_PRIVATEKEY }}
           signing-password: ${{ secrets.GPG_PASSPHRASE }}
           should-run-codecov: ${{ runner.os == 'Linux' }}
-          codecov-directory: build/reports/kover/merged/xml/report.xml
+          codecov-directory: build/reports/kover/merged/xml
           github-token: ${{ github.token }}
           should-deploy: >-
             ${{
@@ -83,7 +83,10 @@ jobs:
             }}
           # Dry-deployment
           deploy-command: >-
-            ./gradlew -PisMainHost=${{ runner.os == 'Linux' }} -Pversion="${{ needs.staging-repo.outputs.next-version }}" -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} uploadAll --parallel
+            NEXT_VERSION="${{ needs.staging-repo.outputs.next-version }}"
+            OVERRIDE_VERSION=$([[ "$NEXT_VERSION" != "" ]] && echo "-PforceVersion=$(echo $NEXT_VERSION)" || echo "")
+            ./gradlew -PisMainHost=${{ runner.os == 'Linux' }} $OVERRIDE_VERSION -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} uploadAll --parallel
+
   docsite:
     runs-on: ubuntu-latest
     concurrency:
@@ -124,7 +127,7 @@ jobs:
         uses: actions/checkout@v3.3.0
       - uses: DanySK/build-check-deploy-gradle-action@2.1.25
         with:
-          maven-central-username: 'nicolasfarabegoli'
+          maven-central-username: nicolasfarabegoli
           maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
           should-run-codecov: false
           should-deploy: true
