--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -10,11 +10,13 @@ jobs:
     concurrency:
       group: staging-repo
     if: >-
-      !github.event.repository.fork
-      && (
-        github.event_name != 'pull_request'
-        || github.event.pull_request.head.repo.full_name == github.repository
-      )
+      ${{
+        !github.event.repository.fork
+        && (
+          github.event_name != 'pull_request'
+          || github.event.pull_request.head.repo.full_name == github.repository
+        )
+      }}
     outputs:
       maven-central-repo-id: ${{ steps.staging-repo.outputs.MavenCentral }}
       next-version: ${{ steps.compute-next-version.outputs.next-version }}
@@ -25,21 +27,24 @@ jobs:
         with:
           fetch-depth: 0
       - uses: DanySK/build-check-deploy-gradle-action@2.1.25
-        id: staging-repo
         with:
           maven-central-username: 'nicolasfarabegoli'
           maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
           should-run-codecov: false
+          should-deploy: true
+          build-command: true
           check-command: true
-          build-command: ./gradlew createStagingRepositoryOnMavenCentral --parallel
-          clean-command: |
-            [[ -f build/staging-repo-ids.properties ]] || (
-              echo "Staging repositories ID file not found" &&
-              exit 1
-            )
-            REPO_IDS=$(cat build/staging-repo-ids.properties)
-            echo "Staging repositories IDs:\n$REPO_IDS"
-            echo $REPO_IDS >> $GITHUB_OUTPUT
+          deploy-command: ./gradlew createStagingRepositoryOnMavenCentral --parallel
+      - name: Save staging repository ID
+        id: staging-repo
+        run: |
+          [[ -f build/staging-repo-ids.properties ]] || (
+            echo "Staging repositories ID file not found" &&
+            exit 1
+          )
+          REPO_IDS=$(cat build/staging-repo-ids.properties)
+          echo "Staging repositories IDs:\n$REPO_IDS"
+          echo $REPO_IDS >> $GITHUB_OUTPUT
       - name: Compute next release version
         id: compute-next-version
         uses: nicolasfara/precompute-semantic-release-version-action@1.0.1
@@ -63,16 +68,19 @@ jobs:
         with:
           maven-central-username: 'nicolasfarabegoli'
           maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-          signing-key: ${{ secrets.SIGNING_KEY }}
-          signing-password: ${{ secrets.SIGNING_PASSWORD }}
+          signing-key: ${{ secrets.GPG_PRIVATEKEY }}
+          signing-password: ${{ secrets.GPG_PASSPHRASE }}
           should-run-codecov: ${{ runner.os == 'Linux' }}
           codecov-directory: build/reports/kover/merged/xml/report.xml
+          github-token: ${{ github.token }}
           should-deploy: >-
-            !github.event.repository.fork
-            && (
-              github.event_name != 'pull_request'
-              || github.event.pull_request.head.repo.full_name == github.repository
-            )
+            ${{
+              !github.event.repository.fork
+              && (
+                github.event_name != 'pull_request'
+                || github.event.pull_request.head.repo.full_name == github.repository
+              )
+            }}
           # Dry-deployment
           deploy-command: >-
             ./gradlew -PisMainHost=${{ runner.os == 'Linux' }} -Pversion="${{ needs.staging-repo.outputs.next-version }}" -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} uploadAll --parallel
@@ -104,11 +112,13 @@ jobs:
     concurrency:
       group: close-staging-repos
     if: >-
-      !github.event.repository.fork
-      && (
-        github.event_name != 'pull_request'
-        || github.event.pull_request.head.repo.full_name == github.repository
-      )
+      ${{
+        !github.event.repository.fork
+        && (
+          github.event_name != 'pull_request'
+          || github.event.pull_request.head.repo.full_name == github.repository
+        )
+      }}
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v3.3.0
@@ -117,9 +127,10 @@ jobs:
           maven-central-username: 'nicolasfarabegoli'
           maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
           should-run-codecov: false
+          should-deploy: true
           build-command: true
           check-command: true
-          clean-command: >-
+          deploy-command: >-
             ./gradlew -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} close --parallel
   release:
     concurrency:
@@ -128,11 +139,13 @@ jobs:
     runs-on: ubuntu-latest
     # Prevent the release job if the run is on a PR or a fork
     if: >-
-      !github.event.repository.fork
-      && (github.event_name != 'pull_request' ||
-        github.event.pull_request.head.repo.full_name == github.repository
-      )
-      && github.ref == 'refs/heads/master'
+      ${{
+        !github.event.repository.fork
+        && (github.event_name != 'pull_request' ||
+          github.event.pull_request.head.repo.full_name == github.repository
+        )
+        && github.ref == 'refs/heads/master'
+      }}
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v3.3.0
@@ -148,6 +161,7 @@ jobs:
           node-version: ${{ steps.node-version.outputs.version }}
       - uses: DanySK/build-check-deploy-gradle-action@2.1.25
         env:
+          STAGING_REPO_ID: ${{ needs.staging-repo.outputs.maven-central-repo-id }}
           ORG_GRADLE_PROJECT_releaseStage: true
         with:
           build-command: true
@@ -170,10 +184,12 @@ jobs:
       - build
       - docsite
     if: >-
-      always() && (
-        contains(join(needs.*.result, ','), 'failure')
-        || !contains(join(needs.*.result, ','), 'cancelled')
-      )
+      ${{
+        always() && (
+          contains(join(needs.*.result, ','), 'failure')
+          || !contains(join(needs.*.result, ','), 'cancelled')
+        )
+      }}
     steps:
       - name: Verify that there were no failures
         run: ${{ !contains(join(needs.*.result, ','), 'failure') }}
