--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,7 @@ kover = "org.jetbrains.kotlinx.kover:0.6.1"
 taskTree = "com.dorongold.task-tree:2.1.1"
 conventionalCommits = "it.nicolasfarabegoli.conventional-commits:3.1.0"
 publishOnCentral = "org.danilopianini.publish-on-central:3.2.4"
-sonarqube = "org.sonarqube:4.0.0.2929"
+git-sensitive-semver = "org.danilopianini.git-sensitive-semantic-versioning:1.1.1"
 
 [libraries]
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
