--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -26,6 +26,11 @@ jobs:
         uses: actions/checkout@v3.3.0
         with:
           fetch-depth: 0
+      - name: Compute next release version
+        id: compute-next-version
+        uses: nicolasfara/precompute-semantic-release-version-action@1.0.2
+        with:
+          github-token: ${{ github.token }}
       - uses: DanySK/build-check-deploy-gradle-action@2.1.26
         with:
           maven-central-username: nicolasfarabegoli
@@ -34,7 +39,12 @@ jobs:
           should-deploy: true
           build-command: true
           check-command: true
-          deploy-command: ./gradlew createStagingRepositoryOnMavenCentral --parallel
+          deploy-command: |
+            if [[ "${{ steps.compute-next-version.outputs.will-release }}" == "true" ]]; then
+              ./gradlew -PforceVersion="${{ steps.compute-next-version.outputs.next-version }}" createStagingRepositoryOnMavenCentral --parallel
+            else
+              ./gradlew createStagingRepositoryOnMavenCentral --parallel
+            fi
       - name: Save staging repository ID
         id: staging-repo
         run: |
@@ -45,11 +55,7 @@ jobs:
           REPO_IDS=$(cat build/staging-repo-ids.properties)
           echo "Staging repositories IDs:\n$REPO_IDS"
           echo $REPO_IDS >> $GITHUB_OUTPUT
-      - name: Compute next release version
-        id: compute-next-version
-        uses: nicolasfara/precompute-semantic-release-version-action@1.0.2
-        with:
-          github-token: ${{ github.token }}
+
   build:
     needs: [ staging-repo ]
     strategy:
@@ -83,9 +89,11 @@ jobs:
             }}
           # Dry-deployment
           deploy-command: >-
-            NEXT_VERSION="${{ needs.staging-repo.outputs.next-version }}"
-            OVERRIDE_VERSION=$([[ "$NEXT_VERSION" != "" ]] && echo "-PforceVersion=$(echo $NEXT_VERSION)" || echo "")
-            ./gradlew -PisMainHost=${{ runner.os == 'Linux' }} $OVERRIDE_VERSION -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} uploadAll --parallel
+            if [[ "${{ needs.staging-repo.outputs.will-release }}" == "true" ]]; then
+              ./gradlew -PisMainHost=${{ runner.os == 'Linux' }} -PforceVersion="${{ needs.staging-repo.outputs.next-version }}" -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} uploadAll --parallel
+            else
+              ./gradlew -PisMainHost=${{ runner.os == 'Linux' }} -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} uploadAll --parallel
+            fi
 
   docsite:
     runs-on: ubuntu-latest
@@ -175,6 +183,7 @@ jobs:
           should-run-codecov: false
           should-deploy: true
           github-token: ${{ github.token }}
+          maven-central-username: nicolasfarabegoli
           maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
           signing-key: ${{ secrets.GPG_PRIVATEKEY }}
           signing-password: ${{ secrets.GPG_PASSPHRASE }}
