--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
 # Workaround for https://github.com/Kotlin/dokka/issues/1405
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=2G
+# kotlin
+kotlin.code.style=official
+kotlin.native.ignoreDisabledTargets=true
+kotlin.mpp.enableCInteropCommonization=true
