--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,15 +1,13 @@
 pull_request_rules:
-  - name: Automatic merge renovate PRs
+  - name: Auto-rebase if appropriately labeled or if the author is an authorized bot
     conditions:
-      - author=renovate[bot]
-      - -conflict # No conflict
-      - -draft # The PR should not be a 'draft'
-    actions:
-      merge:
-        method: rebase
-  - name: Auto-rebase if appropriately labeled
-    conditions:
-      - label=auto-update-rebase
+      - or:
+        - label=auto-update-rebase
+        - and:
+            - label=dependencies
+            - or: &authors_are_bots
+                - author=renovate[bot]
+                - author=dependabot[bot]
       - -draft
       - -conflict
     actions:
@@ -21,13 +19,30 @@ pull_request_rules:
       - -conflict
     actions:
       update:
-  - name: Ask to resolve conflict
+  - name: rebase-merge working updates
+    conditions:
+      - and:
+        - or: *authors_are_bots
+        - and:
+          - or:
+            - check-success=ci-cd / success
+            - check-neutral=ci-cd / success
+            - check-skipped=ci-cd / success
+          - "#review-threads-unresolved=0"
+          - "#commits-behind=0"
+      - label=dependencies
+      - -draft
+      - -conflict
+    actions:
+      merge:
+        method: rebase
+  - name: ask to resolve conflict
     conditions:
       - conflict
     actions:
       comment:
         message: |
           Hi @{{author}}! :wave:
-          I could not help but notice that this pull request has conflicts. :confounded:
+          This pull request has conflicts :confounded:
           Could you fix it? :wrench:
           Thank you! :pray:
