chore(site): add hugo documentation site

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ kover = "org.jetbrains.kotlinx.kover:0.6.1"
 taskTree = "com.dorongold.task-tree:2.1.1"
 publishOnCentral = "org.danilopianini.publish-on-central:5.0.5"
 gitSemVer = "org.danilopianini.git-sensitive-semantic-versioning:1.1.9"
+hugo = "io.github.fstaudt.hugo:0.6.0"
 
 [libraries]
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
