--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -97,7 +97,7 @@ jobs:
           signing-key: ${{ secrets.GPG_PRIVATEKEY }}
           signing-password: ${{ secrets.GPG_PASSPHRASE }}
 
-  docsite:
+  build-website:
     runs-on: ubuntu-22.04
     concurrency:
       group: ${{ github.workflow }}-build-website-${{ github.event.number || github.ref }}
@@ -105,20 +105,21 @@ jobs:
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v3.5.2
-      - uses: actions/setup-node@v3
         with:
-          node-version: 18.12
-      - name: Build docsite
-        run: |
-          cd docsite
-          yarn install
-          yarn run build
-      - name: Release docsite to Github Pages
+          fetch-depth: 0
+      - uses: DanySK/build-check-deploy-gradle-action@2.2.4
+        with:
+          build-command: |
+            ./gradlew hugoBuild --parallel
+          should-run-codecov: false
+          should-deploy: false
+          should-validate-wrapper: false
+      - name: Release website to Github Pages
         if: github.event_name != 'pull_request' && github.ref == 'refs/heads/master'
         uses: JamesIves/github-pages-deploy-action@v4.4.1
         with:
           BRANCH: gh-pages
-          FOLDER: docsite/build
+          FOLDER: build/website
 
   close-staging-repos:
     needs:
@@ -151,7 +152,7 @@ jobs:
     needs:
       - check-secrets
       - staging-repo
-      - docsite
+      - build-website
       - build
       - close-staging-repos
     runs-on: ubuntu-22.04
@@ -194,7 +195,7 @@ jobs:
       - check-secrets
       - staging-repo
       - close-staging-repos
-      - docsite
+      - build-website
       - release
       - build
     if: >-
