--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -106,7 +106,7 @@ jobs:
       - name: Checkout the repo
         uses: actions/checkout@v3.5.2
         with:
-          submodule: true
+          submodules: true
       - uses: DanySK/build-check-deploy-gradle-action@2.2.4
         with:
           build-command: |
