ci: skip check command

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -111,6 +111,7 @@ jobs:
         with:
           build-command: |
             ./gradlew hugoBuild --parallel
+          check-command: true
           should-run-codecov: false
           should-deploy: false
           should-validate-wrapper: false
