--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -107,10 +107,13 @@ jobs:
         uses: actions/checkout@v3.5.2
         with:
           submodules: true
+          fetch-depth: 0
       - uses: DanySK/build-check-deploy-gradle-action@2.2.4
         with:
           build-command: |
-            ./gradlew hugoBuild --parallel
+            NEXT_VERSION="${{ needs.staging-repo.outputs.next-version }}"
+            OVERRIDE_VERSION=$([[ "$NEXT_VERSION" != "" ]] && echo "-PforceVersion=$(echo $NEXT_VERSION)" || echo "")
+            ./gradlew $OVERRIDE_VERSION hugoBuild --parallel
           check-command: true
           should-run-codecov: false
           should-deploy: false
