chore(deps): update all dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,8 @@ org.gradle.jvmargs=-XX:MaxMetaspaceSize=2G
 kotlin.code.style=official
 kotlin.native.ignoreDisabledTargets=true
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.incremental.multiplatform=true
+kotlin.native.ignoreIncorrectDependencies=true
+kotlin.native.binary.memoryModel=experimental
+kotlin.native.cacheKind.linuxX64=none
+
