--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,16 +29,11 @@ kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializa
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
 rabbitmq-reactor = { module = "io.projectreactor.rabbitmq:reactor-rabbitmq", version = "1.5.6" }
-kermit = { module = "co.touchlab:kermit", version.ref = "kermit" }
-# kermit-koin = { module = "co.touchlab:kermit-koin", version.ref = "kermit" }
+kotlinLogger = { module = "io.github.microutils:kotlin-logging", version = "3.0.5" }
 
 [bundles]
 kotest-common = [
   "kotest-assertions-core",
   "kotest-framework-engine",
   "kotest-framework-datatest",
-]
-kermit = [
-  "kermit",
-  # "kermit-koin"
 ]
