--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,5 @@
 [versions]
 dokka = "1.8.10"
-kermit = "2.0.0-RC4"
 koin = "3.4.0"
 kotest = "5.6.2"
 kotlin = "1.8.21"
@@ -30,6 +29,7 @@ koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
 rabbitmq-reactor = { module = "io.projectreactor.rabbitmq:reactor-rabbitmq", version = "1.5.6" }
 kotlinLogger = { module = "io.github.microutils:kotlin-logging", version = "3.0.5" }
+slf4j-simple = { module = "org.slf4j:slf4j-simple", version = "2.0.7"}
 
 [bundles]
 kotest-common = [
