--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,8 +12,9 @@ kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref 
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotest-multiplatform = { id = "io.kotest.multiplatform", version.ref = "kotest" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
-kotlin-qa = "org.danilopianini.gradle-kotlin-qa:0.43.0"
-kover = "org.jetbrains.kotlinx.kover:0.6.1"
+# kotlin-qa = "org.danilopianini.gradle-kotlin-qa:0.41.0"
+detekt = "io.gitlab.arturbosch.detekt:1.23.0"
+kover = "org.jetbrains.kotlinx.kover:0.7.0"
 taskTree = "com.dorongold.task-tree:2.1.1"
 publishOnCentral = "org.danilopianini.publish-on-central:5.0.10"
 gitSemVer = "org.danilopianini.git-sensitive-semantic-versioning:1.1.9"
