--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,7 @@
 [versions]
-dokka = "1.8.10"
-koin = "3.4.0"
+dokka = "1.8.20"
 kotest = "5.6.2"
-kotlin = "1.8.21"
+kotlin = "1.8.22"
 coroutines = "1.7.1"
 arrow = "1.2.0-RC"
 
@@ -27,11 +26,11 @@ kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5-jvm", version.
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-coroutines-reactor = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-reactor", version.ref = "coroutines" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.5.1" }
-kodein = { module = "org.kodein.di:kodein-di", version = "7.20.1" }
-koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
-koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
+kodein = { module = "org.kodein.di:kodein-di", version = "7.20.2" }
+#koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+#koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
 rabbitmq-reactor = { module = "io.projectreactor.rabbitmq:reactor-rabbitmq", version = "1.5.6" }
-kotlinLogger = { module = "io.github.microutils:kotlin-logging", version = "3.0.5" }
+kotlinLogger = { module = "io.github.oshai:kotlin-logging", version = "4.0.0" }
 slf4j-simple = { module = "org.slf4j:slf4j-simple", version = "2.0.7" }
 arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
 arrow-coroutines = { module = "io.arrow-kt:arrow-fx-coroutines", version.ref = "arrow" }
