--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ koin = "3.4.3"
 kotest = "5.6.2"
 kotlin = "1.8.21"
 coroutines = "1.7.2"
-arrow = "1.2.0-RC"
+arrow = "1.2.0"
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
