--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,42 +1,40 @@
 [versions]
+arrow = "1.2.1"
+coroutines = "1.7.3"
 dokka = "1.9.10"
-kermit = "2.0.0-RC5"
-koin = "3.4.3"
 kotest = "5.8.0"
 kotlin = "1.9.20"
-coroutines = "1.7.3"
-arrow = "1.2.1"
 
 [plugins]
+detekt = "io.gitlab.arturbosch.detekt:1.23.3"
+dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
+gitSemVer = "org.danilopianini.git-sensitive-semantic-versioning:2.0.1"
+hugo = "io.github.fstaudt.hugo:0.6.1"
+kotest-multiplatform = { id = "io.kotest.multiplatform", version.ref = "kotest" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-kotest-multiplatform = { id = "io.kotest.multiplatform", version.ref = "kotest" }
-dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
-detekt = "io.gitlab.arturbosch.detekt:1.23.3"
 kover = "org.jetbrains.kotlinx.kover:0.7.4"
-taskTree = "com.dorongold.task-tree:2.1.1"
-gitSemVer = "org.danilopianini.git-sensitive-semantic-versioning:2.0.1"
 publishOnCentral = "org.danilopianini.publish-on-central:5.0.17"
-hugo = "io.github.fstaudt.hugo:0.6.1"
+taskTree = "com.dorongold.task-tree:2.1.1"
 
 [libraries]
+arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
+arrow-coroutines = { module = "io.arrow-kt:arrow-fx-coroutines", version.ref = "arrow" }
+kodein = { module = "org.kodein.di:kodein-di", version = "7.20.2" }
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
-kotest-framework-engine = { module = "io.kotest:kotest-framework-engine", version.ref = "kotest" }
 kotest-framework-datatest = { module = "io.kotest:kotest-framework-datatest", version.ref = "kotest" }
+kotest-framework-engine = { module = "io.kotest:kotest-framework-engine", version.ref = "kotest" }
 kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5-jvm", version.ref = "kotest" }
+kotlin-logging = { module = "io.github.oshai:kotlin-logging", version = "5.1.0" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
-kotlin-test-common = { module = "org.jetbrains.kotlin:kotlin-test-common", version.ref = "kotlin" }
 kotlin-test-annotation-common = { module = "org.jetbrains.kotlin:kotlin-test-annotations-common", version.ref = "kotlin" }
+kotlin-test-common = { module = "org.jetbrains.kotlin:kotlin-test-common", version.ref = "kotlin" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-coroutines-reactor = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-reactor", version.ref = "coroutines" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version = "1.6.0" }
-kodein = { module = "org.kodein.di:kodein-di", version = "7.20.2" }
 rabbitmq-reactor = { module = "io.projectreactor.rabbitmq:reactor-rabbitmq", version = "1.5.6" }
 paho-mqtt = { module = "org.eclipse.paho:org.eclipse.paho.mqttv5.client", version = "1.2.5" }
-kotlinLogger = { module = "io.github.oshai:kotlin-logging", version = "5.1.0" }
 slf4j-simple = { module = "org.slf4j:slf4j-simple", version = "2.0.9" }
-arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
-arrow-coroutines = { module = "io.arrow-kt:arrow-fx-coroutines", version.ref = "arrow" }
 
 [bundles]
 kotest-common = [
