--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,8 @@ max_line_length = 150
 indent_size = 4
 ij_kotlin_allow_trailing_comma = true
 ij_kotlin_allow_trailing_comma_on_call_site = true
+kotlin_code_style = "ktlint_official"
+ktlint_standard_parameter-list-wrapping = false
 
 [*.md]
 trim_trailing_whitespace = false
