style: reformat code according to new style rules

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,10 +9,11 @@ insert_final_newline = true
 [*.{kt,kts}]
 max_line_length = 150
 indent_size = 4
-ij_kotlin_allow_trailing_comma = true
-ij_kotlin_allow_trailing_comma_on_call_site = true
 kotlin_code_style = "ktlint_official"
-ktlint_standard_parameter-list-wrapping = false
+ktlint_standard = enabled
+ktlint_standard_parameter-list-wrapping = disabled
+ktlint_standard_multiline-expression-wrapping = disabled
+ktlint_standard_string-template-indent = disabled
 
 [*.md]
 trim_trailing_whitespace = false
