--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 arrow = "1.2.4"
 coroutines = "1.8.0"
+collektive = "9.2.1"
 dokka = "1.9.20"
 kotest = "5.8.1"
 kotlin = "1.9.23"
@@ -21,6 +22,7 @@ kotlin-qa = "org.danilopianini.gradle-kotlin-qa:0.61.0"
 [libraries]
 arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
 arrow-coroutines = { module = "io.arrow-kt:arrow-fx-coroutines", version.ref = "arrow" }
+collektive = { module = "it.unibo.collektive:dsl", version.ref = "collektive" }
 kodein = { module = "org.kodein.di:kodein-di", version = "7.21.2" }
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
 kotest-framework-datatest = { module = "io.kotest:kotest-framework-datatest", version.ref = "kotest" }
